@@ -18,7 +18,6 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <signal name="delete_event" handler="on_calc_wnd_delete_event" last_modification_time="Wed, 14 Jul 2004 17:20:19 GMT"/>
   <signal name="button_press_event" handler="on_calc_wnd_button_press_event" last_modification_time="Wed, 14 Jul 2004 17:20:38 GMT"/>
   <signal name="button_release_event" handler="on_calc_wnd_button_release_event" last_modification_time="Wed, 14 Jul 2004 17:20:43 GMT"/>
   <signal name="key_press_event" handler="on_calc_wnd_key_press_event" last_modification_time="Wed, 14 Jul 2004 17:20:51 GMT"/>
